// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextField /> Default story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <div>
    <div
      class="text-field__overline"
    >
      <label
        class="label"
        for="1"
      >
        Default text field
         
      </label>
    </div>
    <div
      class="text-field__body"
    >
      <input
        aria-describedby="2"
        aria-invalid="false"
        class="input-field"
        data-bootstrap-override="inputfield"
        id="1"
        type="text"
      />
    </div>
    <div
      class="field-note"
      id="2"
    >
      This is a fieldnote.
    </div>
  </div>
</div>
`;

exports[`<TextField /> Disabled story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <div>
    <div
      class="text-field__overline text-field__overline--disabled"
    >
      <label
        class="label"
        for="6"
      >
        Disabled text field
         
      </label>
    </div>
    <div
      class="text-field__body"
    >
      <input
        aria-describedby="7"
        aria-invalid="false"
        class="input-field"
        data-bootstrap-override="inputfield"
        disabled=""
        id="6"
        type="text"
      />
    </div>
    <div
      class="field-note field-note--disabled"
      id="7"
    >
      This TextField is disabled
    </div>
  </div>
</div>
`;

exports[`<TextField /> DisabledVariants story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <div
    style="display: grid; grid-template-columns: 1fr 2fr 2fr; gap: 2rem;"
  >
    <div />
    <p>
      Placeholder
    </p>
    <p>
      No Placeholder
    </p>
    <p>
      fieldNote, label
    </p>
    <div>
      <div
        class="text-field__overline text-field__overline--disabled"
      >
        <label
          class="label"
          for="50"
        >
          Label text
           
        </label>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="51"
          aria-invalid="false"
          class="input-field"
          data-bootstrap-override="inputfield"
          disabled=""
          id="50"
          placeholder="placeholder"
          type="text"
        />
      </div>
      <div
        class="field-note field-note--disabled"
        id="51"
      >
        fieldNote text
      </div>
    </div>
    <div>
      <div
        class="text-field__overline text-field__overline--disabled"
      >
        <label
          class="label"
          for="52"
        >
          Label text
           
        </label>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="53"
          aria-invalid="false"
          class="input-field"
          data-bootstrap-override="inputfield"
          disabled=""
          id="52"
          type="text"
        />
      </div>
      <div
        class="field-note field-note--disabled"
        id="53"
      >
        fieldNote text
      </div>
    </div>
    <p>
      no fieldNote, label
    </p>
    <div>
      <div
        class="text-field__overline text-field__overline--disabled"
      >
        <label
          class="label"
          for="54"
        >
          Label text
           
        </label>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-invalid="false"
          class="input-field"
          data-bootstrap-override="inputfield"
          disabled=""
          id="54"
          placeholder="placeholder"
          type="text"
        />
      </div>
    </div>
    <div>
      <div
        class="text-field__overline text-field__overline--disabled"
      >
        <label
          class="label"
          for="56"
        >
          Label text
           
        </label>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-invalid="false"
          class="input-field"
          data-bootstrap-override="inputfield"
          disabled=""
          id="56"
          type="text"
        />
      </div>
    </div>
    <p>
      fieldNote, no label
    </p>
    <div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="59"
          aria-invalid="false"
          aria-label="Label text"
          class="input-field"
          data-bootstrap-override="inputfield"
          disabled=""
          id="58"
          placeholder="placeholder"
          type="text"
        />
      </div>
      <div
        class="field-note field-note--disabled"
        id="59"
      >
        fieldNote text
      </div>
    </div>
    <div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="61"
          aria-invalid="false"
          aria-label="Label text"
          class="input-field"
          data-bootstrap-override="inputfield"
          disabled=""
          id="60"
          type="text"
        />
      </div>
      <div
        class="field-note field-note--disabled"
        id="61"
      >
        fieldNote text
      </div>
    </div>
    <p>
      no fieldNote, no label
    </p>
    <div>
      <div
        class="text-field__body"
      >
        <input
          aria-invalid="false"
          aria-label="Label text"
          class="input-field"
          data-bootstrap-override="inputfield"
          disabled=""
          id="62"
          placeholder="placeholder"
          type="text"
        />
      </div>
    </div>
    <div>
      <div
        class="text-field__body"
      >
        <input
          aria-invalid="false"
          aria-label="Label text"
          class="input-field"
          data-bootstrap-override="inputfield"
          disabled=""
          id="64"
          type="text"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextField /> Error story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <div>
    <div
      class="text-field__overline"
    >
      <label
        class="label"
        for="3"
      >
        Error text field
         
      </label>
    </div>
    <div
      class="text-field__body"
    >
      <input
        aria-describedby="4"
        aria-invalid="true"
        class="input-field error"
        data-bootstrap-override="inputfield"
        id="3"
        type="text"
      />
    </div>
    <div
      class="field-note field-note--error"
      id="4"
    >
      <svg
        class="icon field-note__icon"
        fill="currentColor"
        height="1rem"
        role="img"
        style="--icon-size: 1rem;"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="5"
        >
          error
        </title>
        <path
          d="M8.25 21L3 15.75V8.25L8.25 3H15.75L21 8.25V15.75L15.75 21H8.25ZM9.15 16.25L12 13.4L14.85 16.25L16.25 14.85L13.4 12L16.25 9.15L14.85 7.75L12 10.6L9.15 7.75L7.75 9.15L10.6 12L7.75 14.85L9.15 16.25Z"
        />
      </svg>
      This is a fieldnote with an error.
    </div>
  </div>
</div>
`;

exports[`<TextField /> ErrorVariants story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <div
    style="display: grid; grid-template-columns: 1fr 2fr 2fr; gap: 2rem;"
  >
    <div />
    <p>
      Placeholder
    </p>
    <p>
      No Placeholder
    </p>
    <p>
      fieldNote, label
    </p>
    <div>
      <div
        class="text-field__overline"
      >
        <label
          class="label"
          for="30"
        >
          Label text
           
        </label>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="31"
          aria-invalid="true"
          class="input-field error"
          data-bootstrap-override="inputfield"
          id="30"
          placeholder="placeholder"
          type="text"
        />
      </div>
      <div
        class="field-note field-note--error"
        id="31"
      >
        <svg
          class="icon field-note__icon"
          fill="currentColor"
          height="1rem"
          role="img"
          style="--icon-size: 1rem;"
          viewBox="0 0 24 24"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="32"
          >
            error
          </title>
          <path
            d="M8.25 21L3 15.75V8.25L8.25 3H15.75L21 8.25V15.75L15.75 21H8.25ZM9.15 16.25L12 13.4L14.85 16.25L16.25 14.85L13.4 12L16.25 9.15L14.85 7.75L12 10.6L9.15 7.75L7.75 9.15L10.6 12L7.75 14.85L9.15 16.25Z"
          />
        </svg>
        fieldNote text
      </div>
    </div>
    <div>
      <div
        class="text-field__overline"
      >
        <label
          class="label"
          for="33"
        >
          Label text
           
        </label>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="34"
          aria-invalid="true"
          class="input-field error"
          data-bootstrap-override="inputfield"
          id="33"
          type="text"
        />
      </div>
      <div
        class="field-note field-note--error"
        id="34"
      >
        <svg
          class="icon field-note__icon"
          fill="currentColor"
          height="1rem"
          role="img"
          style="--icon-size: 1rem;"
          viewBox="0 0 24 24"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="35"
          >
            error
          </title>
          <path
            d="M8.25 21L3 15.75V8.25L8.25 3H15.75L21 8.25V15.75L15.75 21H8.25ZM9.15 16.25L12 13.4L14.85 16.25L16.25 14.85L13.4 12L16.25 9.15L14.85 7.75L12 10.6L9.15 7.75L7.75 9.15L10.6 12L7.75 14.85L9.15 16.25Z"
          />
        </svg>
        fieldNote text
      </div>
    </div>
    <p>
      no fieldNote, label
    </p>
    <div>
      <div
        class="text-field__overline"
      >
        <label
          class="label"
          for="36"
        >
          Label text
           
        </label>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-invalid="true"
          class="input-field error"
          data-bootstrap-override="inputfield"
          id="36"
          placeholder="placeholder"
          type="text"
        />
      </div>
    </div>
    <div>
      <div
        class="text-field__overline"
      >
        <label
          class="label"
          for="38"
        >
          Label text
           
        </label>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-invalid="true"
          class="input-field error"
          data-bootstrap-override="inputfield"
          id="38"
          type="text"
        />
      </div>
    </div>
    <p>
      fieldNote, no label
    </p>
    <div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="41"
          aria-invalid="true"
          aria-label="Label text"
          class="input-field error"
          data-bootstrap-override="inputfield"
          id="40"
          placeholder="placeholder"
          type="text"
        />
      </div>
      <div
        class="field-note field-note--error"
        id="41"
      >
        <svg
          class="icon field-note__icon"
          fill="currentColor"
          height="1rem"
          role="img"
          style="--icon-size: 1rem;"
          viewBox="0 0 24 24"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="42"
          >
            error
          </title>
          <path
            d="M8.25 21L3 15.75V8.25L8.25 3H15.75L21 8.25V15.75L15.75 21H8.25ZM9.15 16.25L12 13.4L14.85 16.25L16.25 14.85L13.4 12L16.25 9.15L14.85 7.75L12 10.6L9.15 7.75L7.75 9.15L10.6 12L7.75 14.85L9.15 16.25Z"
          />
        </svg>
        fieldNote text
      </div>
    </div>
    <div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="44"
          aria-invalid="true"
          aria-label="Label text"
          class="input-field error"
          data-bootstrap-override="inputfield"
          id="43"
          type="text"
        />
      </div>
      <div
        class="field-note field-note--error"
        id="44"
      >
        <svg
          class="icon field-note__icon"
          fill="currentColor"
          height="1rem"
          role="img"
          style="--icon-size: 1rem;"
          viewBox="0 0 24 24"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="45"
          >
            error
          </title>
          <path
            d="M8.25 21L3 15.75V8.25L8.25 3H15.75L21 8.25V15.75L15.75 21H8.25ZM9.15 16.25L12 13.4L14.85 16.25L16.25 14.85L13.4 12L16.25 9.15L14.85 7.75L12 10.6L9.15 7.75L7.75 9.15L10.6 12L7.75 14.85L9.15 16.25Z"
          />
        </svg>
        fieldNote text
      </div>
    </div>
    <p>
      no fieldNote, no label
    </p>
    <div>
      <div
        class="text-field__body"
      >
        <input
          aria-invalid="true"
          aria-label="Label text"
          class="input-field error"
          data-bootstrap-override="inputfield"
          id="46"
          placeholder="placeholder"
          type="text"
        />
      </div>
    </div>
    <div>
      <div
        class="text-field__body"
      >
        <input
          aria-invalid="true"
          aria-label="Label text"
          class="input-field error"
          data-bootstrap-override="inputfield"
          id="48"
          type="text"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextField /> InputWithin story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <div>
    <div
      class="text-field__overline"
    >
      <label
        class="label"
        for="12"
      >
        Input field with button inside
         
      </label>
    </div>
    <div
      class="text-field__body"
    >
      <input
        aria-invalid="false"
        class="input-field"
        data-bootstrap-override="inputfield"
        id="12"
        type="text"
      />
      <div
        class="text-field__input-within"
      >
        <button
          class="clickable-style clickable-style--sm clickable-style--icon clickable-style--brand button button--icon"
          data-bootstrap-override="clickable-style-icon"
          type="button"
        >
          Button
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextField /> LabelFieldnoteVariants story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <div
    style="display: grid; grid-template-columns: 1fr 2fr 2fr; gap: 2rem;"
  >
    <div />
    <p>
      Placeholder
    </p>
    <p>
      No Placeholder
    </p>
    <p>
      fieldNote, label
    </p>
    <div>
      <div
        class="text-field__overline"
      >
        <label
          class="label"
          for="14"
        >
          Label text
           
        </label>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="15"
          aria-invalid="false"
          class="input-field"
          data-bootstrap-override="inputfield"
          id="14"
          placeholder="placeholder"
          type="text"
        />
      </div>
      <div
        class="field-note"
        id="15"
      >
        fieldNote text
      </div>
    </div>
    <div>
      <div
        class="text-field__overline"
      >
        <label
          class="label"
          for="16"
        >
          Label text
           
        </label>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="17"
          aria-invalid="false"
          class="input-field"
          data-bootstrap-override="inputfield"
          id="16"
          type="text"
        />
      </div>
      <div
        class="field-note"
        id="17"
      >
        fieldNote text
      </div>
    </div>
    <p>
      no fieldNote, label
    </p>
    <div>
      <div
        class="text-field__overline"
      >
        <label
          class="label"
          for="18"
        >
          Label text
           
        </label>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-invalid="false"
          class="input-field"
          data-bootstrap-override="inputfield"
          id="18"
          placeholder="placeholder"
          type="text"
        />
      </div>
    </div>
    <div>
      <div
        class="text-field__overline"
      >
        <label
          class="label"
          for="20"
        >
          Label text
           
        </label>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-invalid="false"
          class="input-field"
          data-bootstrap-override="inputfield"
          id="20"
          type="text"
        />
      </div>
    </div>
    <p>
      fieldNote, no label
    </p>
    <div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="23"
          aria-invalid="false"
          aria-label="Label text"
          class="input-field"
          data-bootstrap-override="inputfield"
          id="22"
          placeholder="placeholder"
          type="text"
        />
      </div>
      <div
        class="field-note"
        id="23"
      >
        fieldNote text
      </div>
    </div>
    <div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="25"
          aria-invalid="false"
          aria-label="Label text"
          class="input-field"
          data-bootstrap-override="inputfield"
          id="24"
          type="text"
        />
      </div>
      <div
        class="field-note"
        id="25"
      >
        fieldNote text
      </div>
    </div>
    <p>
      no fieldNote, no label
    </p>
    <div>
      <div
        class="text-field__body"
      >
        <input
          aria-invalid="false"
          aria-label="Label text"
          class="input-field"
          data-bootstrap-override="inputfield"
          id="26"
          placeholder="placeholder"
          type="text"
        />
      </div>
    </div>
    <div>
      <div
        class="text-field__body"
      >
        <input
          aria-invalid="false"
          aria-label="Label text"
          class="input-field"
          data-bootstrap-override="inputfield"
          id="28"
          type="text"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextField /> NoVisibleLabel story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <div>
    <div
      class="text-field__overline text-field__overline--no-label"
    >
      <p
        class="text text--sm"
      >
        Required
      </p>
    </div>
    <div
      class="text-field__body"
    >
      <input
        aria-describedby="11"
        aria-invalid="false"
        aria-label="Input for no visible label"
        class="input-field"
        data-bootstrap-override="inputfield"
        id="10"
        required=""
        type="text"
      />
    </div>
    <div
      class="field-note"
      id="11"
    >
      This text field has no visible label
    </div>
  </div>
</div>
`;

exports[`<TextField /> Required story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <div>
    <div
      class="text-field__overline"
    >
      <label
        class="label"
        for="8"
      >
        Text field with fieldNote
         
      </label>
      <p
        class="text text--sm"
      >
        Required
      </p>
    </div>
    <div
      class="text-field__body"
    >
      <input
        aria-describedby="9"
        aria-invalid="false"
        class="input-field"
        data-bootstrap-override="inputfield"
        id="8"
        required=""
        type="text"
      />
    </div>
    <div
      class="field-note"
      id="9"
    >
      This is a fieldnote for a required text field.
    </div>
  </div>
</div>
`;

exports[`<TextField /> RequiredVariants story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <div
    style="display: grid; grid-template-columns: 1fr 2fr 2fr; gap: 2rem;"
  >
    <div />
    <p>
      Placeholder
    </p>
    <p>
      No Placeholder
    </p>
    <p>
      fieldNote, label
    </p>
    <div>
      <div
        class="text-field__overline"
      >
        <label
          class="label"
          for="66"
        >
          Label text
           
        </label>
        <p
          class="text text--sm"
        >
          Required
        </p>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="67"
          aria-invalid="false"
          class="input-field"
          data-bootstrap-override="inputfield"
          id="66"
          placeholder="placeholder"
          required=""
          type="text"
        />
      </div>
      <div
        class="field-note"
        id="67"
      >
        fieldNote text
      </div>
    </div>
    <div>
      <div
        class="text-field__overline"
      >
        <label
          class="label"
          for="68"
        >
          Label text
           
        </label>
        <p
          class="text text--sm"
        >
          Required
        </p>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="69"
          aria-invalid="false"
          class="input-field"
          data-bootstrap-override="inputfield"
          id="68"
          required=""
          type="text"
        />
      </div>
      <div
        class="field-note"
        id="69"
      >
        fieldNote text
      </div>
    </div>
    <p>
      no fieldNote, label
    </p>
    <div>
      <div
        class="text-field__overline"
      >
        <label
          class="label"
          for="70"
        >
          Label text
           
        </label>
        <p
          class="text text--sm"
        >
          Required
        </p>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-invalid="false"
          class="input-field"
          data-bootstrap-override="inputfield"
          id="70"
          placeholder="placeholder"
          required=""
          type="text"
        />
      </div>
    </div>
    <div>
      <div
        class="text-field__overline"
      >
        <label
          class="label"
          for="72"
        >
          Label text
           
        </label>
        <p
          class="text text--sm"
        >
          Required
        </p>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-invalid="false"
          class="input-field"
          data-bootstrap-override="inputfield"
          id="72"
          required=""
          type="text"
        />
      </div>
    </div>
    <p>
      fieldNote, no label
    </p>
    <div>
      <div
        class="text-field__overline text-field__overline--no-label"
      >
        <p
          class="text text--sm"
        >
          Required
        </p>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="75"
          aria-invalid="false"
          aria-label="Label text"
          class="input-field"
          data-bootstrap-override="inputfield"
          id="74"
          placeholder="placeholder"
          required=""
          type="text"
        />
      </div>
      <div
        class="field-note"
        id="75"
      >
        fieldNote text
      </div>
    </div>
    <div>
      <div
        class="text-field__overline text-field__overline--no-label"
      >
        <p
          class="text text--sm"
        >
          Required
        </p>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="77"
          aria-invalid="false"
          aria-label="Label text"
          class="input-field"
          data-bootstrap-override="inputfield"
          id="76"
          required=""
          type="text"
        />
      </div>
      <div
        class="field-note"
        id="77"
      >
        fieldNote text
      </div>
    </div>
    <p>
      no fieldNote, no label
    </p>
    <div>
      <div
        class="text-field__overline text-field__overline--no-label"
      >
        <p
          class="text text--sm"
        >
          Required
        </p>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-invalid="false"
          aria-label="Label text"
          class="input-field"
          data-bootstrap-override="inputfield"
          id="78"
          placeholder="placeholder"
          required=""
          type="text"
        />
      </div>
    </div>
    <div>
      <div
        class="text-field__overline text-field__overline--no-label"
      >
        <p
          class="text text--sm"
        >
          Required
        </p>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-invalid="false"
          aria-label="Label text"
          class="input-field"
          data-bootstrap-override="inputfield"
          id="80"
          required=""
          type="text"
        />
      </div>
    </div>
    <p>
      fieldNote, label, isError
    </p>
    <div>
      <div
        class="text-field__overline"
      >
        <label
          class="label"
          for="82"
        >
          Label text
           
        </label>
        <p
          class="text text--sm"
        >
          Required
        </p>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="83"
          aria-invalid="true"
          class="input-field error"
          data-bootstrap-override="inputfield"
          id="82"
          placeholder="placeholder"
          required=""
          type="text"
        />
      </div>
      <div
        class="field-note field-note--error"
        id="83"
      >
        <svg
          class="icon field-note__icon"
          fill="currentColor"
          height="1rem"
          role="img"
          style="--icon-size: 1rem;"
          viewBox="0 0 24 24"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="84"
          >
            error
          </title>
          <path
            d="M8.25 21L3 15.75V8.25L8.25 3H15.75L21 8.25V15.75L15.75 21H8.25ZM9.15 16.25L12 13.4L14.85 16.25L16.25 14.85L13.4 12L16.25 9.15L14.85 7.75L12 10.6L9.15 7.75L7.75 9.15L10.6 12L7.75 14.85L9.15 16.25Z"
          />
        </svg>
        fieldNote text
      </div>
    </div>
    <div>
      <div
        class="text-field__overline"
      >
        <label
          class="label"
          for="85"
        >
          Label text
           
        </label>
        <p
          class="text text--sm"
        >
          Required
        </p>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="86"
          aria-invalid="true"
          class="input-field error"
          data-bootstrap-override="inputfield"
          id="85"
          required=""
          type="text"
        />
      </div>
      <div
        class="field-note field-note--error"
        id="86"
      >
        <svg
          class="icon field-note__icon"
          fill="currentColor"
          height="1rem"
          role="img"
          style="--icon-size: 1rem;"
          viewBox="0 0 24 24"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="87"
          >
            error
          </title>
          <path
            d="M8.25 21L3 15.75V8.25L8.25 3H15.75L21 8.25V15.75L15.75 21H8.25ZM9.15 16.25L12 13.4L14.85 16.25L16.25 14.85L13.4 12L16.25 9.15L14.85 7.75L12 10.6L9.15 7.75L7.75 9.15L10.6 12L7.75 14.85L9.15 16.25Z"
          />
        </svg>
        fieldNote text
      </div>
    </div>
    <p>
      fieldNote, label, disabled
    </p>
    <div>
      <div
        class="text-field__overline text-field__overline--disabled"
      >
        <label
          class="label"
          for="88"
        >
          Label text
           
        </label>
        <p
          class="text text--sm"
        >
          Required
        </p>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="89"
          aria-invalid="false"
          class="input-field"
          data-bootstrap-override="inputfield"
          disabled=""
          id="88"
          placeholder="placeholder"
          required=""
          type="text"
        />
      </div>
      <div
        class="field-note field-note--disabled"
        id="89"
      >
        fieldNote text
      </div>
    </div>
    <div>
      <div
        class="text-field__overline text-field__overline--disabled"
      >
        <label
          class="label"
          for="90"
        >
          Label text
           
        </label>
        <p
          class="text text--sm"
        >
          Required
        </p>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="91"
          aria-invalid="false"
          class="input-field"
          data-bootstrap-override="inputfield"
          disabled=""
          id="90"
          required=""
          type="text"
        />
      </div>
      <div
        class="field-note field-note--disabled"
        id="91"
      >
        fieldNote text
      </div>
    </div>
  </div>
</div>
`;
